# EVM_MEV

./: .gitignore  README.md
analysis/: plot.py
contracts/: .env.example
contracts/script/: DeployDemo.s.sol  RunSandwichDemo.s.sol
contracts/src/: MiniAMM.sol  MockERC20.sol
contracts/test/: Sandwich.t.sol
dashboard/: dashboard-ui.test.js  index.html  mev-model.js  mev-model.test.js
data/: sweep_attacker_size.csv  sweep_fee.csv  sweep_pool_depth.csv  sweep_slippage.csv  sweep_victim_size.csv
docs/: defense.md  lab_walkthrough.md  mechanism.md  update_2026-04-29.md
searcher/: Cargo.toml
searcher/src/: amm.rs  experiments.rs  main.rs  report.rs  strategy.rs
