[package]
name = "sandwich-searcher"
version = "0.1.0"
edition = "2021"
description = "Educational Rust simulator for sandwich MEV in constant-product AMMs"

[[bin]]
name = "sandwich"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
anyhow = "1"

[dev-dependencies]
approx = "0.5"

[profile.release]
opt-level = 3
lto = true
